--- a/WebContent/css/style.css
+++ b/WebContent/css/style.css
@@ -16,8 +16,9 @@ body {
     margin-top: 15px;
     padding-left: 3%;
 }
-
 h1 {
+    font-size: 24px;
+    display: inline;
     width: 94%;
     padding-top: 17px;
     padding-left: 3%;
@@ -130,4 +131,24 @@ select{
 
 h1 a {
     color: #eeeeee;
+}
+table#report_list th {
+    font-weight: bold;
+    padding: 10px 2%;
+}
+
+table#report_list .report_name {
+    width: 20%;
+    padding: 10px 2%;
+}
+table#report_list .report_date {
+    width: 20%;
+}
+
+table#report_list .report_title {
+    width: 37%;
+}
+
+table#report_list .report_action {
+    width: 13%;
 }
